syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
    rpc SignupUser (SignupRequest) returns (SignupResponse);
    rpc LoginUser (LoginRequest) returns (UserResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message SignupResponse {
    bool status = 1;
    string error = 2;
    UserResponse user = 3;
}

message SignupRequest {
    string name = 1;
    string mobile = 2;
    string email = 3;
    string password = 4;
}

message UserResponse {
    string userid = 1;
    string name = 2;
    string email = 3;
    string created = 4;
}